Fixed alignment of texts in user and images table

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -252,12 +252,13 @@ body {
     padding-bottom: 12px;
     font-size: 16px;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid var(--grey);
 }
 
 #content main .table-data .order table td {
     padding: 16px 0;
+    text-align: center;
     
 }
 
