--- a/static/css/images.css
+++ b/static/css/images.css
@@ -152,12 +152,14 @@ li {
 	padding-bottom: 12px;
 	font-size: 16px;
 	font-weight: 500;
-	text-align: left;
+	text-align: center;
 	border-bottom: 1px solid var(--grey);
 }
 
+
 .table-data .order table td {
 	padding: 16px 0;
+	text-align: center;
 }
 
 .table-data .order table tr td:first-child {
